# chatgpt-service

./: Cargo.toml  LICENSE  README.md  api.js  index.html  package-lock.json  package.json  tailwind.config.cjs  trunk.toml
common/: Cargo.toml
common/src/: lib.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src-tauri/src/storage/: mod.rs
