[package]
name = "chatgpt-backend"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sian Cao <yinshuiboy@gmail.com"]
license = "MIT"
repository = ""
default-run = "chatgpt-backend"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
reqwest = {version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"
config = "0.13.3"
rand = "0.8.5"
thiserror = "1.0.39"
dashmap = { version = "5.4.0", features = ["serde", "rayon"] }
common = { path = "../common" }
uuid = { version = "1.3.0", features = ["v7", "serde", "wasm-bindgen"] }
getrandom = { version = "0.2.8", features = ["js"] }
sled = "0.34.7"
itertools = "0.10.5"
reqwest-eventsource = "0.4.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "local-storage", "persist-storage"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
local-storage = []
persist-storage = []
